Fixed landing splash scaling to be visible on smaller screens (ie. laptops). Add entrance animation to 'K' overlay.
Move body background-color to be set on home page. Pretty & lint files.

--- a/frontend/src/kissena/theme.module.css
+++ b/frontend/src/kissena/theme.module.css
@@ -1,11 +1,12 @@
-html, body, #root {
-    height: 100%;
-    width: 100%;
-    background-color: var(--mantine-color-darkGreen-6);
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
 }
 
 :root {
-    @mixin smaller-than $mantine-breakpoint-md {
-        font-size: 12px;
-    }
+  @mixin smaller-than $mantine-breakpoint-md {
+    font-size: 12px;
+  }
 }
